--- a/index.html
+++ b/index.html
@@ -265,8 +265,7 @@
   <div class="game-container" id="gameContainer">
     <div class="game-background"></div>
     <div class="rain-effect" id="rainEffect"></div>
-    <!-- Placeholder for the cartoon image -->
-    <img src="/api/placeholder/220/220" alt="Ekrem İmamoğlu Cartoon" class="target-image" id="targetImage">
+    <img src="ekrem-imamoglu.png" alt="Ekrem İmamoğlu" class="target-image" id="targetImage">
     <div class="flash" id="flashEffect"></div>
     <div class="volume-control" id="volumeToggle">🔊</div>
   </div>
